# Notatnik_NPG

./: .gitignore  BACKLOG.md  CMakeLists.txt  main.cpp
include/: MainWindow.h
src/: MainWindow.cpp
